--- a/src/app/pages/localizaciones/localizaciones.page.html
+++ b/src/app/pages/localizaciones/localizaciones.page.html
@@ -11,60 +11,77 @@
     
     <div class="locations-grid">
       <div class="location-card recycling-card" (click)="irAlLugar(-21.533520725684145, -64.68836447323733)">
-        <div class="location-header">
-          <div class="location-info">
-            <h3 class="location-name">Centro Municipal de reciclaje</h3>
-          </div>
+        
+       
+        <div class="location-icon">
+          <img src="assets/images/reciclaje1.png" alt="Centro Municipal de reciclaje">
         </div>
-        <p class="location-details">
-          Acepta: Plástico, papel, vidrio y metales<br>
-          Horario: Lun-Sáb 8:00-18:00
-        </p>
-        <div class="location-actions">
-          <ion-button fill="clear" size="small" class="action-btn"
-           (click)="$event.stopPropagation(); irAlLugar(-21.533520725684145, -64.68836447323733)"
-          >
-            Ir
-          </ion-button>
+        <div class="location-content">
+          <div class="location-header">
+            <div class="location-info">
+              <h3 class="location-name">Centro Municipal de reciclaje</h3>
+            </div>
+          </div>
+          <p class="location-details">
+            Acepta: Plástico, papel, vidrio y metales<br>
+            Horario: Lun-Sáb 8:00-18:00
+          </p>
+          <div class="location-actions">
+            <ion-button fill="clear" size="small" class="action-btn"
+             (click)="$event.stopPropagation(); irAlLugar(-21.533520725684145, -64.68836447323733)"
+            >
+              Ir
+            </ion-button>
+          </div>
         </div>
       </div>
 
       <div class="location-card recycling-card" (click)="irAlLugar(-21.51606453845192, -64.74592762451674)">
-        <div class="location-header">
-          <div class="location-info">
-            <h3 class="location-name">Reciclajes Tarija</h3>
-          </div>
+        <div class="location-icon">
+          <img src="assets/images/reciclaje2.png" alt="Reciclajes Tarija">
         </div>
-        <p class="location-details">
-          Acepta: Aluminio, cartin, baterias, cobre <br>
-          papel blanco, papel de color y periodico <br>
-          Horario: Lunes-Viernes 14:00-18:00
-        </p>
-        <div class="location-actions">
-          <ion-button fill="clear" size="small" class="action-btn"
-          (click)="$event.stopPropagation(); irAlLugar(-21.51606453845192, -64.74592762451674)"
-          >
-            Ir
-          </ion-button>
+        <div class="location-content">
+          <div class="location-header">
+            <div class="location-info">
+              <h3 class="location-name">Reciclajes Tarija</h3>
+            </div>
+          </div>
+          <p class="location-details">
+            Acepta: Aluminio, cartin, baterias, cobre <br>
+            papel blanco, papel de color y periodico <br>
+            Horario: Lunes-Viernes 14:00-18:00
+          </p>
+          <div class="location-actions">
+            <ion-button fill="clear" size="small" class="action-btn"
+            (click)="$event.stopPropagation(); irAlLugar(-21.51606453845192, -64.74592762451674)"
+            >
+              Ir
+            </ion-button>
+          </div>
         </div>
       </div>
 
       <div class="location-card recycling-card" (click)="irAlLugar(-21.54352378587114, -64.74425455445532)">
-        <div class="location-header">
-          <div class="location-info">
-            <h3 class="location-name">Recicladora Virgen de Urkupiña</h3>
-          </div>
+        <div class="location-icon">
+          <img src="assets/images/reciclaje3.png" alt="Recicladora Virgen de Urkupiña">
         </div>
-        <p class="location-details">
-          Reciclaje de cobre, bronce y aluminio<br>
-          Horario: Lun-Vie 8:00-19:00
-        </p>
-        <div class="location-actions">
-          <ion-button fill="clear" size="small" class="action-btn"
-          (click)="$event.stopPropagation(); irAlLugar(-21.54352378587114, -64.74425455445532)"
-          >
-            Ir
-          </ion-button>
+        <div class="location-content">
+          <div class="location-header">
+            <div class="location-info">
+              <h3 class="location-name">Recicladora Virgen de Urkupiña</h3>
+            </div>
+          </div>
+          <p class="location-details">
+            Reciclaje de cobre, bronce y aluminio<br>
+            Horario: Lun-Vie 8:00-19:00
+          </p>
+          <div class="location-actions">
+            <ion-button fill="clear" size="small" class="action-btn"
+            (click)="$event.stopPropagation(); irAlLugar(-21.54352378587114, -64.74425455445532)"
+            >
+              Ir
+            </ion-button>
+          </div>
         </div>
       </div>
     </div>
@@ -76,49 +93,59 @@
     
     <div class="locations-grid">
       <div class="location-card tourism-card" (click)="irAlLugar(-21.716721483227662, -65.07053808993732)">
-        <div class="location-header">
-          <div class="location-info">
-            <h3 class="location-name">Reserva Biológica de la Cordillera de Sama</h3>
-          </div>
-          <span class="distance-badge">Municipio</span>
+        <div class="location-icon">
+          <img src="assets/images/turismo1.png" alt="Reserva Biológica de la Cordillera de Sama">
         </div>
-        <p class="location-details">
-          El circuito de Tajzara, a 3.600 m.s.n.m., ofrece lagunas, fauna andina, dunas, iglesias y talleres. <br>
-          Accesible todo el año, cuando no llueve
-        </p>
-        <div class="location-actions">
-          <ion-button fill="clear" size="small" class="action-btn"
-          (click)="$event.stopPropagation(); irAlLugar(-21.716721483227662, -65.07053808993732)"
-          >
-            Ir
-          </ion-button>
-          <ion-button fill="clear" size="small" class="action-btn"
-            onclick="window.open('https://tarijaturismo.com/tajzara/', '_blank')"> 
-            Información
-          </ion-button>
+        <div class="location-content">
+          <div class="location-header">
+            <div class="location-info">
+              <h3 class="location-name">Reserva Biológica de la Cordillera de Sama</h3>
+            </div>
+            <span class="distance-badge">Municipio</span>
+          </div>
+          <p class="location-details">
+            El circuito de Tajzara, a 3.600 m.s.n.m., ofrece lagunas, fauna andina, dunas, iglesias y talleres. <br>
+            Accesible todo el año, cuando no llueve
+          </p>
+          <div class="location-actions">
+            <ion-button fill="clear" size="small" class="action-btn"
+            (click)="$event.stopPropagation(); irAlLugar(-21.716721483227662, -65.07053808993732)"
+            >
+              Ir
+            </ion-button>
+            <ion-button fill="clear" size="small" class="action-btn"
+              onclick="window.open('https://tarijaturismo.com/tajzara/', '_blank')"> 
+              Información
+            </ion-button>
+          </div>
         </div>
       </div>
 
       <div class="location-card tourism-card" (click)="irAlLugar(-21.52631722205689, -64.73828291742043)">
-        <div class="location-header">
-          <div class="location-info">
-            <h3 class="location-name">Parque de las Flores</h3>
-          </div>
-          <span class="distance-badge">Parque</span>
+        <div class="location-icon">
+          <img src="assets/images/parque.png" alt="Parque de las Flores">
         </div>
-        <p class="location-details">
-          Un lugar hermoso y tranquilo en la zona La Loma, entre las calles Cochabamba y Aniceto Arce, ideal para relajarse y disfrutar de la vista, los árboles y las flores.<br>
-        </p>
-        <div class="location-actions">
-          <ion-button fill="clear" size="small" class="action-btn"
-          (click)="$event.stopPropagation(); irAlLugar(-21.52631722205689, -64.73828291742043)"
-          >
-            Ir
-          </ion-button>
-          <ion-button fill="clear" size="small" class="action-btn"
-           onclick="window.open('https://tarijaturismo.com/parque-de-las-flores/', '_blank')">
-            Información
-          </ion-button>
+        <div class="location-content">
+          <div class="location-header">
+            <div class="location-info">
+              <h3 class="location-name">Parque de las Flores</h3>
+            </div>
+            <span class="distance-badge">Parque</span>
+          </div>
+          <p class="location-details">
+            Un lugar hermoso y tranquilo en la zona La Loma, entre las calles Cochabamba y Aniceto Arce, ideal para relajarse y disfrutar de la vista, los árboles y las flores.<br>
+          </p>
+          <div class="location-actions">
+            <ion-button fill="clear" size="small" class="action-btn"
+            (click)="$event.stopPropagation(); irAlLugar(-21.52631722205689, -64.73828291742043)"
+            >
+              Ir
+            </ion-button>
+            <ion-button fill="clear" size="small" class="action-btn"
+             onclick="window.open('https://tarijaturismo.com/parque-de-las-flores/', '_blank')">
+              Información
+            </ion-button>
+          </div>
         </div>
       </div>
     </div>
